--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Ravenwolf Studio</h1>
     <br>
-    <p>This site is currently undergoing maintenance and will be up soon! Hello</p>
+    <p>This site is currently undergoing maintenance and will be up soon!</p>
   </body>
 </html>
