--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Ravenwolf Studio</title>
-    <link rel="shortcut icon" href="favicon.ico?">
+    <link rel="shortcut icon" href="favicon.png?">
   </head>
   <body>
     <h1>Ravenwolf Studio</h1>
